--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.10"
+    "mongoose": "^6.2.10",
+    "passport": "^0.5.2",
+    "passport-http-bearer": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
