change add loans page

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb+srv://kraspedakusta:123456q@cluster0.gi65w.mongodb.net/loandb?retryWrites=true&w=majority
 DB_NAME=loandb
 PORT=5000
-JWT_SECRET='secretfortoken'
+JWT_SECRET=secretfortoken
